fix: headings color and spacing

--- a/assets/css/custom_custom/custom-elements/custom-typography.css
+++ b/assets/css/custom_custom/custom-elements/custom-typography.css
@@ -1,25 +1,25 @@
 /* Headings */
-h1[id*=""] {
+h1[id] {
   color: var(--color-heading-1);
 }
 
-h2[id*=""] {
+h2[id] {
   color: var(--color-heading-2);
 }
 
-h3[id*=""] {
+h3[id] {
   color: var(--color-heading-3);
 }
 
-h4[id*=""] {
+h4[id] {
   color: var(--color-heading-4);
 }
 
-h5[id*=""] {
+h5[id] {
   color: var(--color-heading-5);
 }
 
-h6[id*=""] {
+h6[id] {
   color: var(--color-heading-6);
 }
 
